# score-addon-berlioz

./: CMakeLists.txt  score_addon_berlioz.cpp  score_addon_berlioz.hpp
berlioz/: ApplicationPlugin.cpp  ApplicationPlugin.hpp  CommandFactory.hpp  Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  Layer.hpp  LocalTree.cpp  LocalTree.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp  View.hpp
